--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "dotenv": "^17.2.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "nodemon": "^3.1.10"
   }
 }
